[gd_scene load_steps=18 format=3 uid="uid://bh87k8845grhg"]

[ext_resource type="Script" path="res://Scripts/combat.gd" id="1_oeykr"]
[ext_resource type="Texture2D" uid="uid://bljwwr3by46b" path="res://Art/f1_bg.png" id="2_i0dv2"]
[ext_resource type="Texture2D" uid="uid://dn0kg7pour2nt" path="res://Art/button_att.png" id="2_jph7b"]
[ext_resource type="Texture2D" uid="uid://bp00625gpgq8a" path="res://Art/button_mag.png" id="3_hyr67"]
[ext_resource type="Texture2D" uid="uid://c0wp4vjtquf5a" path="res://Art/student.png" id="3_um16y"]
[ext_resource type="Texture2D" uid="uid://bevfmmcra5nck" path="res://Art/button_hea.png" id="4_q7ylt"]
[ext_resource type="Texture2D" uid="uid://2jyn348i48g7" path="res://Art/teacher.png" id="4_rqgkh"]
[ext_resource type="Texture2D" uid="uid://bqcm8ibb1iyi0" path="res://Art/button_run.png" id="5_gmvxc"]
[ext_resource type="Texture2D" uid="uid://u5lmkoy8a8bl" path="res://Art/roguecomputer.png" id="5_pgk08"]
[ext_resource type="Texture2D" uid="uid://b251cv06squc4" path="res://Art/button_thr.png" id="6_kxjts"]
[ext_resource type="Texture2D" uid="uid://qm30p4vxdxbn" path="res://Art/placeholder_student_battleicon.png" id="6_mthoe"]
[ext_resource type="Texture2D" uid="uid://2eotmj1n7h24" path="res://Art/button_sma.png" id="7_f6v4l"]
[ext_resource type="FontFile" uid="uid://yx8eo66u0ce3" path="res://pixel-comic-sans-undertale-sans-font.ttf" id="8_m3717"]
[ext_resource type="Texture2D" uid="uid://bqdyp38w5mcqg" path="res://Art/gui_health.png" id="8_xhcrw"]
[ext_resource type="Texture2D" uid="uid://dpevno03iqvuo" path="res://Art/gui_mana.png" id="9_jftkt"]
[ext_resource type="Texture2D" uid="uid://ddemsdbmlqxnd" path="res://Art/back.png" id="10_4n2kl"]
[ext_resource type="Texture2D" uid="uid://bi2hiv412o068" path="res://Art/gui_textbox.png" id="11_2befd"]

[node name="Node" type="Node"]
script = ExtResource("1_oeykr")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_i0dv2")

[node name="Student" type="TextureRect" parent="."]
visible = false
offset_left = 605.0
offset_top = -152.0
offset_right = 1373.0
offset_bottom = 872.0
texture = ExtResource("3_um16y")

[node name="Teacher" type="TextureRect" parent="."]
visible = false
offset_left = 720.0
offset_top = 9.0
offset_right = 1214.25
offset_bottom = 668.0
texture = ExtResource("4_rqgkh")
expand_mode = 3

[node name="Computer" type="TextureRect" parent="."]
visible = false
offset_left = 536.0
offset_top = -77.0
offset_right = 1304.0
offset_bottom = 947.0
texture = ExtResource("5_pgk08")

[node name="Attack" type="TextureButton" parent="."]
offset_left = 361.0
offset_top = 667.0
offset_right = 1552.0
offset_bottom = 857.0
texture_normal = ExtResource("2_jph7b")
stretch_mode = 5

[node name="Magic" type="TextureButton" parent="."]
offset_left = 364.0
offset_top = 878.0
offset_right = 1549.0
offset_bottom = 1068.0
texture_normal = ExtResource("3_hyr67")
stretch_mode = 5

[node name="Heal" type="TextureButton" parent="."]
visible = false
offset_left = 562.0
offset_top = 667.0
offset_right = 942.0
offset_bottom = 857.0
texture_normal = ExtResource("4_q7ylt")
stretch_mode = 4

[node name="Sp1" type="TextureButton" parent="."]
visible = false
offset_left = 967.0
offset_top = 667.0
offset_right = 1347.0
offset_bottom = 857.0
texture_normal = ExtResource("6_kxjts")
stretch_mode = 4

[node name="Sp2" type="TextureButton" parent="."]
visible = false
offset_left = 562.0
offset_top = 878.0
offset_right = 942.0
offset_bottom = 1068.0
texture_normal = ExtResource("7_f6v4l")
stretch_mode = 4

[node name="Back" type="TextureButton" parent="."]
visible = false
offset_left = 1181.0
offset_top = 878.0
offset_right = 1436.0
offset_bottom = 1068.0
texture_normal = ExtResource("10_4n2kl")
stretch_mode = 4

[node name="Run" type="TextureButton" parent="."]
visible = false
offset_left = 967.0
offset_top = 878.0
offset_right = 1193.0
offset_bottom = 1068.0
texture_normal = ExtResource("5_gmvxc")
stretch_mode = 4

[node name="Health" type="TextureRect" parent="."]
offset_left = 17.0
offset_top = 805.0
offset_right = 246.0
offset_bottom = 917.0
texture = ExtResource("8_xhcrw")
stretch_mode = 4

[node name="mana" type="TextureRect" parent="."]
offset_left = 17.0
offset_top = 931.0
offset_right = 246.0
offset_bottom = 1043.0
texture = ExtResource("9_jftkt")
stretch_mode = 4

[node name="Etextbox" type="TextureRect" parent="."]
offset_left = 1376.0
offset_top = 17.0
offset_right = 1895.0
offset_bottom = 787.0
texture = ExtResource("11_2befd")

[node name="Ptextbox" type="TextureRect" parent="."]
offset_left = 25.0
offset_top = 17.0
offset_right = 544.0
offset_bottom = 787.0
texture = ExtResource("11_2befd")

[node name="JohnACG" type="TextureRect" parent="."]
offset_left = 246.0
offset_top = 795.0
offset_right = 544.0
offset_bottom = 1076.0
texture = ExtResource("6_mthoe")

[node name="Log" type="Label" parent="."]
offset_left = 54.0
offset_top = 44.0
offset_right = 509.0
offset_bottom = 753.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_m3717")
theme_override_font_sizes/font_size = 50

[node name="ELog" type="Label" parent="."]
offset_left = 1404.0
offset_top = 45.0
offset_right = 1880.0
offset_bottom = 757.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_m3717")
theme_override_font_sizes/font_size = 40

[node name="EnemyDisplay" type="Label" parent="."]
offset_left = 737.0
offset_top = 5.0
offset_right = 1145.0
offset_bottom = 93.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_m3717")
theme_override_font_sizes/font_size = 76
text = "Wuhoh"

[node name="Mana" type="Label" parent="."]
offset_left = 150.0
offset_top = 960.0
offset_right = 207.0
offset_bottom = 1030.0
theme_override_fonts/font = ExtResource("8_m3717")
theme_override_font_sizes/font_size = 60

[node name="HP" type="Label" parent="."]
offset_left = 140.0
offset_top = 840.0
offset_right = 223.0
offset_bottom = 888.0
theme_override_fonts/font = ExtResource("8_m3717")
theme_override_font_sizes/font_size = 50

[connection signal="pressed" from="Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="Magic" to="." method="_on_magic_pressed"]
[connection signal="pressed" from="Heal" to="." method="_on_heal_pressed"]
[connection signal="pressed" from="Sp1" to="." method="_on_sp_1_pressed"]
[connection signal="pressed" from="Sp2" to="." method="_on_sp_2_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Run" to="." method="_on_run_pressed"]
